# evo

./: README.md  README_DRAFT.md
.github/workflows/: ci.yml  publish.yml
plugins/evo/: pyproject.toml
plugins/evo/.claude-plugin/: plugin.json
plugins/evo/.codex-plugin/: plugin.json
plugins/evo/hooks/: hooks.json
plugins/evo/npm/: package.json
plugins/evo/skills/discover/: SKILL.md
plugins/evo/skills/discover/references/: constructing-benchmark.md  sdk_python.py
plugins/evo/skills/infra-setup/: SKILL.md
plugins/evo/skills/infra-setup/references/: provider-matrix.md
plugins/evo/skills/optimize/: SKILL.md
plugins/evo/skills/references/: agent-sdk-reference.md  cli-quick-reference.md
plugins/evo/skills/subagent/: SKILL.md
plugins/evo/src/evo/: __init__.py  cli.py  core.py  dashboard.py  dispatch.py  git_bundle.py  providers.py  sandbox_client.py  scratchpad.py  version_check.py  workspace_executor.py
plugins/evo/src/evo/backends/: __init__.py  pool.py  pool_state.py  protocol.py  remote.py  remote_state.py  state_keys.py  worktree.py
plugins/evo/src/evo/backends/sandbox_providers/: __init__.py  _common.py  aws.py  azure.py  daytona.py  e2b.py  manual.py  modal.py  ssh.py
plugins/evo/src/evo/hermes_plugin/: __init__.py
plugins/evo/src/evo/host_install/: __init__.py  _hook_drain.py  claude_code.py  codex.py  cursor.py  hermes.py  openclaw.py  opencode.py  pi.py
plugins/evo/src/evo/hosts/: claude_fork.py
plugins/evo/src/evo/inject/: __init__.py  drain.py  marker.py  paths.py  queue.py  registry.py
plugins/evo/src/evo/openclaw_plugin/: evo.bundle.js  index.ts
plugins/evo/src/evo/opencode_plugin/: drain.ts  evo.bundle.js  index.ts
plugins/evo/src/evo/static/: app.js  highlight-langs-extra.min.js  index.html  style.css
plugins/evo/tests/: test_dashboard_frontier_strategy.py  test_lifecycle.py  test_runtime_env.py
scripts/cursor_hook_probe/: dryrun.sh
sdk/node/: package.json
sdk/python/: pyproject.toml
sdk/python/src/evo_agent/: __init__.py
tests/: _sandbox_agent_fixture.py  _sshd_fixture.py  conftest.py  integ_remote_localhost.py  live_remote_azure_end_to_end.py
tests/e2e/: test_e2e.py  test_e2e_lineage.py  test_e2e_pool.py  test_integ_localhost.py
tests/live/: _modal_provider_helper.py  test_aws.py  test_azure.py  test_daytona.py  test_e2b.py  test_inject_live.py  test_install_sandbox.py  test_modal.py  test_modal_agent.py  test_release_smoke.py  test_remote_gc.py
tests/skills/: README.md
tests/unit/: test_config_get.py  test_config_set.py  test_dashboard_frontier_strategy.py  test_dispatch.py  test_frontier_strategies.py  test_gc_dispatch.py  test_hook_drain.py  test_inject.py  test_inject_parity.py  test_inline_instrumentation.py  test_lifecycle.py  test_load_result.py  test_marketplace_source.py  test_remote_execution_recovery.py  (+3 more)
(+10 files in other folders)
