[project]
name = "evo-hq-cli"
version = "0.4.2"
description = "Structured experiment-driven code optimization with git worktrees, traces, and a local dashboard. CLI for the evo plugin (Claude Code, Codex)."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
dependencies = [
  "flask>=3.0.0",
  "portalocker>=2.8.0",
  "pyyaml>=6.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
# Remote-sandbox provider SDKs. Install with `evo-hq-cli[modal]` or
# `evo-hq-cli[all]`. Each provider's evo adapter lazy-imports its SDK
# inside its module so users who don't want a given provider don't
# carry its deps.
modal = [
    "modal>=0.62.0",
]
e2b = [
    "e2b>=2.20.0",
]
daytona = [
    "daytona>=0.170.0",
]
aws = [
    "boto3>=1.42.66",
]
azure = [
    "azure-identity>=1.17.1",
    "azure-mgmt-resource>=23.1.1",
    "azure-mgmt-network>=28.0.0",
    "azure-mgmt-compute>=34.0.0",
]
all = [
    "modal>=0.62.0",
    "e2b>=2.20.0",
    "daytona>=0.170.0",
    "boto3>=1.42.66",
    "azure-identity>=1.17.1",
    "azure-mgmt-resource>=23.1.1",
    "azure-mgmt-network>=28.0.0",
    "azure-mgmt-compute>=34.0.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/evo-hq/evo"
Repository = "https://github.com/evo-hq/evo"
Issues = "https://github.com/evo-hq/evo/issues"

[project.scripts]
evo = "evo.cli:main"
evo-dashboard = "evo.dashboard:main"
evo-drain = "evo.inject.drain:main"

[project.entry-points."hermes_agent.plugins"]
evo = "evo.hermes_plugin"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
# evo-hook-drain ships as a per-platform Rust binary fetched at install
# time from the GitHub release. The CLI wheel itself doesn't carry binaries.
script-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evo = ["static/*", "opencode_plugin/*.js", "openclaw_plugin/*.js", "openclaw_plugin/native/*.js", "openclaw_plugin/native/*.json", "openclaw_plugin/native/*.md"]
