[project]
name = "evo-hq-agent"
version = "0.4.0"
description = "Lightweight reporting SDK for evo experiments. Zero dependencies."
requires-python = ">=3.10"
dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/evo-hq/evo"
Repository = "https://github.com/evo-hq/evo"
Issues = "https://github.com/evo-hq/evo/issues"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
